--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
     border-radius: 20px;
     margin-top: 25px;
     background-color: #e0dede;
+    opacity: 100%;
 }
 
 .logo{
@@ -85,6 +86,43 @@ hr {
 }
 
 .maps-container {
+    display: flex;
+    justify-content: right;
     position: absolute;
-    width: 50%;
+    width: 95%;
+}
+
+.sector{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.title-sector{
+    text-align: center;
+}
+
+.column-sector{
+    padding-top: 0.7rem;
+}
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #92140C; /* Set a background color */
+    color: #e0dede; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+  
+#myBtn:hover {
+    background-color: #e0dede; /* Add a dark-grey background on hover */
+    color: #92140C;
 }
