--- a/css/style.css
+++ b/css/style.css
@@ -107,22 +107,35 @@ hr {
 }
 
 #myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: #92140C; /* Set a background color */
-    color: #e0dede; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: #92140C; 
+    color: #e0dede; 
+    cursor: pointer; 
+    padding: 15px; 
+    border-radius: 10px; 
+    font-size: 18px; 
+    border: 1px solid black;
 }
   
 #myBtn:hover {
-    background-color: #e0dede; /* Add a dark-grey background on hover */
+    background-color: #e0dede; 
     color: #92140C;
+    border: 0;
+}
+
+.footer{
+    position: relative;
+    width: 100%;
+    height: 500px;
+    z-index: -1;
+}
+
+a{
+    text-decoration: none;
 }
