--- a/css/style.css
+++ b/css/style.css
@@ -2,70 +2,30 @@ body{
     font-family: 'DM Sans', sans-serif;
 }
 
-.header{
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.navbar{
-    width: 100%;
-    display: flex;
-    border-radius: 20px;
-    margin-top: 25px;
-    background-color: #e0dede;
-    opacity: 100%;
+html{
+    scroll-behavior: smooth;
 }
 
 .logo{
-    width: 100px;
-    height: 100px;
+    width: 82px;
+    height: 82px;
     background-color: #92140C;
     border-radius: 10px;
     position: absolute;
 }
 
 .img-logo{
-    width: 100px;
-    height: 100px;
+    width: 82px;
+    height: 82px;
 }
 
-.navbar-brand-l{
-    margin-left: 225px;
-}
-
-.navbar-brand-r{
-    margin-right: 225px;
-}
-
-.nav-l{
-    display: flex;
-    justify-content: left;
-    width: 50%;
-}
-
-.nav-r{
-    display: flex;
-    justify-content: right;
-    width: 50%;
-}
-
-.navbar-brand-l:hover{
-    font-weight: bold !important;
-}
-
-.navbar-brand-r:hover{
-    font-weight: bold !important;
-}
-
-#contact:hover{
-    font-weight: normal !important;
-    color: white;
+.btn:hover{
+    color: #92140C;
 }
 
 .divider {
-    margin-top: 45rem;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
     display: flex;
 }
 
@@ -80,62 +40,366 @@ body{
 }
   
 hr {
-    border: 1px solid black;
-    position: absolute;
+  
+    border: 0;
+    height: 1px;
     width: 100%;
+    position: relative;
+    margin: 2rem auto;
 }
 
 .maps-container {
     display: flex;
     justify-content: right;
     position: absolute;
-    width: 95%;
+    width: 100%;
 }
 
-.sector{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
+.maps{
+    width: 100%;
+    height: 100%;
 }
 
-.title-sector{
-    text-align: center;
-}
-
-.column-sector{
-    padding-top: 0.7rem;
-}
-
-#myBtn {
-    display: none; 
-    position: fixed; 
-    bottom: 20px; 
-    right: 30px; 
-    z-index: 99; 
-    border: none; 
-    outline: none; 
-    background-color: #92140C; 
-    color: #e0dede; 
-    cursor: pointer; 
-    padding: 15px; 
-    border-radius: 10px; 
-    font-size: 18px; 
-    border: 1px solid black;
-}
-  
-#myBtn:hover {
-    background-color: #e0dede; 
-    color: #92140C;
-    border: 0;
+.title{
+    width: 50rem;
 }
 
 .footer{
     position: relative;
-    width: 100%;
-    height: 500px;
-    z-index: -1;
+    width: 85%;
+    height: 17rem;
+    background-color: #e0dede;
+    padding: 2rem;
+    margin-left: 7.5%;
+    margin-right: 7.5%;
+    padding-bottom: 2rem;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
 
 a{
     text-decoration: none;
+    color: #92140C;
+}
+
+a:hover{
+    text-decoration: none;
+    color: maroon;
+}
+
+.info{
+    margin-left: 10rem;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+}
+
+.text-divider{
+    margin-left: 0%;
+    position: relative;
+    width: 50rem;
+    border: 1px solid #92140C;
+    height: 0px;
+}
+
+.info-text{
+    position: relative;
+    width: 100%;
+}
+
+.info-item{
+    position: relative;
+    margin-top: 5rem;
+    margin-left: 25rem;
+    width: 5rem;
+    height: 5rem;
+    color: #92140C;
+}
+
+.info-icon{
+    margin-bottom: 2.5rem;
+    color: #92140C;
+}
+
+.info-icon-text{
+    position: relative;
+    margin-top: 0.5rem;
+    padding-left: 25rem;
+    font-size: medium;
+}
+
+.center-diamond{
+    background: #92140C;
+    border: none;
+}
+
+.footer-item{
+    color: #92140C;
+    width: 3rem;
+    height: 3rem;
+    margin-bottom: 2rem;
+}
+
+.footer-item:hover{
+    color: maroon;
+}
+
+.footer-icon{
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.sector-icon{
+    margin: auto;
+    margin-left: 5rem;
+}
+    
+.center-diamond::before{
+  content: "";
+  width: 2rem;
+  height: 2rem;
+  background: #92140C;
+  display: inline-block;
+  border: 1px solid #92140C;
+  position: absolute;
+  top: -15px;
+  left: 50%;
+  border-radius: 5px;
+  margin: 0 0 0 -3px;
+  transform:rotate(45deg);
+  -ms-transform:rotate(45deg); /* IE 9 */
+  -webkit-transform:rotate(45deg); /* Opera, Chrome, and Safari */
+}
+
+
+.sm-text-devider {
+    height: 10px;
+    color: #92140C;
+    background-image: linear-gradient(-45deg,
+      transparent,
+      transparent 25%,
+      currentColor 25%,
+      currentColor 50%,
+      transparent 50%,
+      transparent 75%,
+      currentColor 75%);
+    background-size: 10px 10px;
+    width: 250px;
+    margin-left: 0;
+}
+
+.right-text{
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    font-size: 300px;
+    width: 100%;
+    text-align: center;
+    background-clip: 0;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-color: #92140C;
+    background-image: url('../images/stripe_7041b7e20806b2b9efd920ebe9f67902.png');
+}
+
+aside {
+    flex: 1;
+    background-color: #e0dede;
+    padding: 20px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+}
+
+body::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #92140C;
+}
+
+
+start-header {
+    opacity: 1;
+    transform: translateY(0);
+    padding: 20px 0;
+    box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
+    -webkit-transition : all 0.3s ease-out;
+    transition : all 0.3s ease-out;
+  }
+  .start-header.scroll-on {
+    box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
+    padding: 10px 0;
+    -webkit-transition : all 0.3s ease-out;
+    transition : all 0.3s ease-out;
+  }
+  .start-header.scroll-on .navbar-brand img{
+    height: 24px;
+    -webkit-transition : all 0.3s ease-out;
+    transition : all 0.3s ease-out;
+  }
+  .navigation-wrap{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 996;
+    -webkit-transition : all 0.3s ease-out;
+    transition : all 0.3s ease-out;
+  }
+  .navbar{
+    padding: 0;
+    height: 5rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: #e0dede;
+    padding: 2rem;
+    z-index: 997;
+  }
+  .navbar-brand img{
+    height: 28px;
+    width: auto;
+    display: block;
+    filter: brightness(10%);
+    -webkit-transition : all 0.3s ease-out;
+    transition : all 0.3s ease-out;
+  }
+  .navbar-toggler {
+    float: right;
+    border: none;
+    padding-right: 0;
+  }
+  .navbar-toggler:active,
+  .navbar-toggler:focus {
+    outline: none;
+  }
+  .navbar-light .navbar-toggler-icon {
+    width: 24px;
+    height: 17px;
+    background-image: none;
+    margin-top: 2rem;
+    margin-right: 2rem;
+    left: 100;
+    right: 0;
+    transition: all 300ms linear;
+  }
+  .navbar-light .navbar-toggler-icon:after, 
+  .navbar-light .navbar-toggler-icon:before{
+    width: 24px;
+    position: absolute;
+    height: 5px;
+    background-color: #92140C;
+    margin-top: 2rem;
+    margin-right: 2rem;
+    left: 100;
+    right: 0;
+    top: 0;
+    content: '';
+    z-index: 2;
+      transition: all 300ms linear;
+  }
+  .navbar-light .navbar-toggler-icon:after{
+    top: 8px;
+  }
+  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
+    transform: rotate(45deg);
+  }
+  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
+    transform: translateY(8px) rotate(-45deg);
+  }
+  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+    border-color: transparent;
+  }
+  .nav-link{
+    color: #212121 !important;
+    font-weight: 500;
+    transition: all 200ms linear;
+  }
+  .nav-item:hover .nav-link{
+    color: #92140C !important;
+  }
+  .nav-item.active .nav-link{
+    color: #92140C !important;
+  }
+  .nav-link {
+    position: relative;
+    padding: 5px 0 !important;
+    display: inline-block;
+  }
+  .nav-item:after{
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    content: '';
+    background-color: #92140C;
+    opacity: 0;
+      transition: all 200ms linear;
+  }
+  .nav-item:hover:after{
+    bottom: 0;
+    opacity: 1;
+  }
+  .nav-item.active:hover:after{
+    opacity: 0;
+  }
+  .nav-item{
+    position: relative;
+      transition: all 200ms linear;
+  }
+  .bg-light{
+    background-color: transparent !important;
+  }
+  .pl-4, .px-4 {
+    padding-left: 0.5rem!important;
+}
+.pt-4, .py-4 {
+  padding-top: 0rem!important;
+}
+.navbar-nav{
+  background-color: #e0dede!important;
+  border-radius: 0.2rem;
+}
+.pb-4, .py-4 {
+  padding-bottom: 0rem!important;
+}
+
+.modal-backdrop{
+  z-index: 0;
+}
+
+.nav-txt{
+  padding-top: -0.5rem!important;
+}
+
+.brands{
+  justify-content: center;
+  text-align: center;
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+}
+
+.brands-container{
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.right-text-brands{
+  font-size: 300px;
+  width: 100%;
+  text-align: center;
+  background-clip: 0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-color: #92140C;
+  background-image: url('../images/stripe_7041b7e20806b2b9efd920ebe9f67902.png');
+}
+
+.img-brands{
+  width: 15rem;
 }
